--- a/environment.yml
+++ b/environment.yml
@@ -101,7 +101,7 @@ dependencies:
       - alipy==1.2.5
       - astunparse==1.6.3
       - cachetools==5.3.0
-      - cython==0.29.33
+      # - cython==0.29.33
       - flatbuffers==23.3.3
       - gast==0.4.0
       - google-auth==2.16.2
@@ -111,7 +111,7 @@ dependencies:
       - h5py==3.8.0
       - importlib-metadata==6.0.0
       - keras==2.11.0
-      - libact==0.1.6
+      # - libact==0.1.6
       - libclang==15.0.6.1
       - markdown==3.4.1
       - markupsafe==2.1.2
